--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ jobs:
         - run:
             name: look at cache
             command: |
-                ls ~/
+                ls -al ~/
         
         - restore_cache:
             keys: 
@@ -28,7 +28,10 @@ jobs:
         - run:
             name: look at cache
             command: |
-                ls ~/
+                ls -al ~/
+                if [ -d "~/mycache" ]; then
+                    ls -al ~/mycache
+                done
         
         - run:
             name: make cache
