--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ jobs:
         - run:
             name: look at cache
             command: |
-                ls -al ~/
+                ls -a ~/
         
         - restore_cache:
             keys: 
@@ -28,10 +28,10 @@ jobs:
         - run:
             name: look at cache
             command: |
-                ls -al ~/
+                ls -a ~/
                 if [ -d "~/mycache" ]; then
-                    ls -al ~/mycache
-                done
+                    ls -a ~/mycache
+                fi
         
         - run:
             name: make cache
