--- a/circle.yml
+++ b/circle.yml
@@ -7,12 +7,6 @@ jobs:
     working_directory: /home/circleci/project
     steps:
 
-        - run:
-            name: setup environment
-            command: |
-                echo 'export BUILD_STACK_ID=circ$CIRCLE_BUILD_NUM' >> $BASH_ENV
-                echo "circ$CIRCLE_BUILD_NUM"
-
         - checkout
         
         - run:
@@ -21,7 +15,7 @@ jobs:
                 ls ~/
         
         - restore_cache:
-            keys: 
+            keys: # Restores the first one it finds
                 - gittest-{{ .Branch }}
                 - gittest-master
         
@@ -41,6 +35,6 @@ jobs:
                 touch ~/mycache/$CIRCLE_BUILD_NUM
 
         - save_cache:
-            key: gittest-{{ .Branch }}-{{ epoch }}
+            key: gittest-{{ .Branch }}-{{ epoch }} # {{ epoch }} gets ignored when restoring above
             paths:
                 - "~/mycache"
